{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 43,
  "lineage": "cc63d47e-012a-61f9-0083-1a94fe43ec6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ae32289dd25b7f0",
            "arn": "arn:aws:ec2:us-east-1:471112951024:elastic-ip/eipalloc-04ae32289dd25b7f0",
            "association_id": "eipassoc-04366368c6f649f46",
            "domain": "vpc",
            "id": "eipalloc-04ae32289dd25b7f0",
            "instance": "i-057951c4019aaaf87",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f696c8db25bff756",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-50-19-254-224.compute-1.amazonaws.com",
            "public_ip": "50.19.254.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iot-sensor-project-ec2-eip",
              "Project": "iot-sensor-project"
            },
            "tags_all": {
              "Name": "iot-sensor-project-ec2-eip",
              "Project": "iot-sensor-project"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.sensor_broker",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sensor_broker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee72650e64503637",
            "arn": "arn:aws:ec2:us-east-1:471112951024:instance/i-057951c4019aaaf87",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-057951c4019aaaf87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "wireguard-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f696c8db25bff756",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-34-224-165-99.compute-1.amazonaws.com",
            "public_ip": "34.224.165.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da1ddc551d379ebe",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cf2c6d3e30ba288",
            "tags": {
              "Name": "iot-sensor-project-sensor-broker",
              "Project": "iot-sensor-project"
            },
            "tags_all": {
              "Name": "iot-sensor-project-sensor-broker",
              "Project": "iot-sensor-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ef58a68ef239efe"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112951024:internet-gateway/igw-0ba9911cf4b504d14",
            "id": "igw-0ba9911cf4b504d14",
            "owner_id": "471112951024",
            "tags": {
              "Name": "iot-sensor-project-igw",
              "Project": "iot-sensor-project"
            },
            "tags_all": {
              "Name": "iot-sensor-project-igw",
              "Project": "iot-sensor-project"
            },
            "vpc_id": "vpc-0f3ec255af3eb6a65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112951024:route-table/rtb-0b9f7ae276124ad33",
            "id": "rtb-0b9f7ae276124ad33",
            "owner_id": "471112951024",
            "propagating_vgws": [
              "vgw-07075e162e2a0a9fd"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba9911cf4b504d14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iot-sensor-project-public-rt",
              "Project": "iot-sensor-project"
            },
            "tags_all": {
              "Name": "iot-sensor-project-public-rt",
              "Project": "iot-sensor-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3ec255af3eb6a65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3b7cc4ce8e1a3eb",
            "route_table_id": "rtb-0b9f7ae276124ad33",
            "subnet_id": "subnet-06cf2c6d3e30ba288"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112951024:security-group/sg-05ef58a68ef239efe",
            "description": "SG para la EC2 que recibe datos de la Raspberry Pi por VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ef58a68ef239efe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "MQTT",
                "from_port": 1883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1883
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "Sensor data from Raspberry Pi via VPN",
                "from_port": 8883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8883
              }
            ],
            "name": "iot-sensor-project-ec2-sg",
            "name_prefix": "",
            "owner_id": "471112951024",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iot-sensor-project-ec2-sg",
              "Project": "iot-sensor-project"
            },
            "tags_all": {
              "Name": "iot-sensor-project-ec2-sg",
              "Project": "iot-sensor-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3ec255af3eb6a65"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112951024:subnet/subnet-0815454ccf74af3c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0815454ccf74af3c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112951024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iot-sensor-project-private-subnet",
              "Project": "iot-sensor-project"
            },
            "tags_all": {
              "Name": "iot-sensor-project-private-subnet",
              "Project": "iot-sensor-project"
            },
            "vpc_id": "vpc-0f3ec255af3eb6a65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112951024:subnet/subnet-06cf2c6d3e30ba288",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cf2c6d3e30ba288",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112951024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "iot-sensor-project-public-subnet",
              "Project": "iot-sensor-project"
            },
            "tags_all": {
              "Name": "iot-sensor-project-public-subnet",
              "Project": "iot-sensor-project"
            },
            "vpc_id": "vpc-0f3ec255af3eb6a65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112951024:vpc/vpc-0f3ec255af3eb6a65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02ac7aefef1b5b0e8",
            "default_route_table_id": "rtb-07b4d00ebf29b3a6e",
            "default_security_group_id": "sg-05e4e2456c3e07bfa",
            "dhcp_options_id": "dopt-0ee5375a6239ac848",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3ec255af3eb6a65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b4d00ebf29b3a6e",
            "owner_id": "471112951024",
            "tags": {
              "Name": "iot-sensor-project-vpc",
              "Project": "iot-sensor-project"
            },
            "tags_all": {
              "Name": "iot-sensor-project-vpc",
              "Project": "iot-sensor-project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}